--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "syscall.h": "c"
     }
 }
